# PoleChudes

./: .clang-format  .clang-tidy  .cmake-format.json  .editorconfig  .gitignore  CMakeLists.txt  README.md
assets/: dict.txt
src/: game.c  game.h  gfx.c  gfx.h  main.c  net.c  net.h  nutpunch.c  structures.c  text.c  text.h  util.c  util.h  utils.h
